--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "json-key-encoder",
   "version": "0.1.0",
   "description": "Extract/Merge key and value trees from a JSON.",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
