--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "json-key-encoder",
+  "name": "json-lean",
   "version": "0.1.0",
   "description": "Extract/Merge key and value trees from a JSON.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "keywords": [
     "json",
     "keys",
     "compress",
-    "decompress"
+    "decompress",
+    "encode",
+    "merge",
+    "split",
+    "combine"
   ],
   "author": "Armin Roșu <hello@armin.ro> (http://armin.ro)",
   "license": "MIT"
